2009-11-03  Yaar Schnitman  <yaar@chromium.org>

        Reviewed by Dimitri Glazkov.

        Imported action and rules python files that WebCore.gyp depends on. 
        These files used to live in chromium.org and deal mostly with auto-generation
        of code by wrapping existing webkit perl scripts.

        https://bugs.webkit.org/show_bug.cgi?id=31071

        * WebCore.gyp/WebCore.gyp: Fixed paths in actions and rules.
        * WebCore.gyp/scripts/action_csspropertynames.py: Added.
        * WebCore.gyp/scripts/action_cssvaluekeywords.py: Added.
        * WebCore.gyp/scripts/action_makenames.py: Added.
        * WebCore.gyp/scripts/action_maketokenizer.py: Added.
        * WebCore.gyp/scripts/action_useragentstylesheets.py: Added.
        * WebCore.gyp/scripts/rule_binding.py: Added.
        * WebCore.gyp/scripts/rule_bison.py: Added.
        * WebCore.gyp/scripts/rule_gperf.py: Added.

2009-11-03  Bradley Green  <brg@chromium.org>

        Reviewed by Dmitry Titov.

        Implement window.navigator.registerProtocolHandler in webkit,
        https://bugs.webkit.org/b/29651

        Also implemented its sister API window.navigator.registerContentHandler.

        These methods are as described in the HTML5 specification which can be
        found here,
        http://dev.w3.org/html5/spec/Overview.html#dom-navigator-registerprotocolhandler
        http://dev.w3.org/html5/spec/Overview.html#dom-navigator-registercontenthandler

        As specified in the document, the behavior of the browser is determined
        by the current registered handler.  The state of a registered handler
        can change at any time, with the user clearing a registered handler,
        registering a different page as handler, or deferring the hander to the
        OS.  If webkit was to track the state of the currently registered
        handlers, it would need more APIs and complexity to keep in sync with